<resources>
    <string name="app_name">NotesApp</string>
    <string name="notes">My Notes</string>
    <string name="search">Search your notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_subtitle">Notes Sub Title</string>
    <string name="notes_desc">Enter note here</string>
    <string name="notes_url">Enter web url here</string>
    <string name="read_storage_text">This app needs access your storage</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>