<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"

        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/ColorWhite" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"

        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/ColorWhite" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/notes_title"
        android:background="@null"
        android:textColorHint="@color/ColorGray"
        android:fontFamily="@font/manrope_bold"
        android:textColor="@color/ColorWhite"
        android:textSize="@dimen/_14sdp"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/etNoteDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/ColorGray"
        android:fontFamily="@font/manrope_bold"
        android:textColor="@color/ColorGray"
        android:textSize="@dimen/_8sdp"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/etNoteDateTime"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/ColorBlue"/>

        <EditText
            android:id="@+id/etNoteSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"

            android:hint="@string/notes_subtitle"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/manrope_regular"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorWhite"
            android:maxLines="1"
            android:background="@null"
            android:ellipsize="end" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">
        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp" />
        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/notes_url"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:text="http://"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:textSize="@dimen/_12ssp" />
            <ImageView
                android:id="@+id/imgUrlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:visibility="gone"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:textSize="@dimen/_12sdp"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:textAllCaps="false"
                android:background="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/ok"
                android:id="@+id/btnOk"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorAccent"
                />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/l2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/ColorGray"
        android:fontFamily="@font/manrope_bold"
        android:textColor="@color/ColorGray"
        android:textSize="@dimen/_12ssp"
        android:ellipsize="end"
        android:visibility="gone"
        android:autoLink="web"
        />


    <EditText
        android:id="@+id/etNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvWebLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:textColorHint="@color/ColorGray"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/ColorWhite"
        android:textSize="@dimen/_12sdp"
        android:maxLines="1"
        android:background="@null"
        android:ellipsize="end" />

    <FrameLayout
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bar" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>